--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Noto Sans KR", sans-serif;
-  height: 3000px;
 }
 
 header {
@@ -148,6 +147,7 @@ header .main-menu .item .item__contents .contents__menu {
 header .main-menu .item .item__contents .contents__menu > ul {
   width: 1100px;
   margin: 0 auto;
+  position: relative;
   display: flex;
   padding: 20px 0;
   box-sizing: border-box;
@@ -460,34 +460,35 @@ header .badges .badge {
 .rewards .rewards-left {
   width: 50%;
   height: 100%;
-  position: absolute;
-  left: 0;
   background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .rewards .rewards-right {
   width: 50%;
   height: 100%;
+  background-color: #d5c798;
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #d5c798;
 }
 .rewards .inner {
   width: 1100px;
   height: 241px;
   margin: 0 auto;
+  position: relative;
   z-index: 1;
   background-image: url("../images/rewards.jpg");
   background-position: center;
-  position: relative;
 }
 .rewards .inner .btn-group {
-  position: absolute;
-  right: 0;
-  bottom: 24px;
   width: 250px;
   display: flex;
   flex-wrap: wrap;
+  position: absolute;
+  right: 0;
+  bottom: 24px;
 }
 .rewards .inner .btn-group .btn.sign-up {
   text-decoration: none;
@@ -548,12 +549,73 @@ header .badges .badge {
   box-sizing: border-box;
   display: block;
   transition: 0.4s;
-  flex: 1;
   margin-top: 10px;
+  flex-grow: 1;
 }
 .rewards .inner .btn-group .btn.gift:hover {
   color: white;
   background-color: #333;
+}
+
+.youtube {
+  position: relative;
+  height: 700px;
+  background-color: #333;
+  overflow: hidden;
+}
+.youtube .youtube__area {
+  width: 1920px;
+  background-color: orange;
+  position: absolute;
+  left: 50%;
+  margin-left: -960px;
+  top: 50%;
+  margin-top: -540px;
+}
+.youtube .youtube__area::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+}
+.youtube #player {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.youtube .youtube__cover {
+  background-image: url("../images/video_cover_pattern.png");
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.youtube .inner {
+  width: 1100px;
+  height: 700px;
+  margin: 0 auto;
+  position: relative;
+  color: orange;
+}
+.youtube .inner .floating1 {
+  position: absolute;
+  top: 50px;
+  left: 0;
+}
+.youtube .inner .floating2 {
+  position: absolute;
+  top: 350px;
+  left: 150px;
+}
+.youtube .inner .floating3 {
+  position: absolute;
+  bottom: -200px;
+  right: 0;
 }
 
 .season-product {
@@ -608,8 +670,8 @@ header .badges .badge {
   width: 1100px;
   height: 400px;
   margin: 0 auto;
-  display: flex;
   position: relative;
+  display: flex;
 }
 .reserve-coffee .inner .reserve-logo {
   position: absolute;
@@ -656,6 +718,7 @@ header .badges .badge {
   width: 1100px;
   height: 706px;
   margin: 0 auto;
+  position: relative;
   padding: 110px 0;
   box-sizing: border-box;
 }
@@ -707,6 +770,7 @@ header .badges .badge {
   width: 1100px;
   height: 600px;
   margin: 0 auto;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -817,9 +881,9 @@ header .badges .badge {
   width: 1100px;
   height: 120px;
   margin: 0 auto;
+  position: relative;
   padding: 40px 0;
   box-sizing: border-box;
-  position: relative;
   display: flex;
   align-items: center;
 }
@@ -867,6 +931,7 @@ footer .inner {
   width: 1100px;
   height: 333;
   margin: 0 auto;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
