--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,6 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Noto Sans KR", sans-serif;
-  height: 3000px;
 }
 
 @mixin vc() {
@@ -30,6 +29,7 @@ body {
   width: 1100px;
   height: #{$h};
   margin: 0 auto;
+  position: relative;
 }
 
 @mixin btn($color) {
@@ -67,7 +67,6 @@ header {
   z-index: 9;
   > .inner {
     @include inner(120px);
-    position: relative;
   }
   .logo {
     width: 75px;
@@ -245,7 +244,6 @@ header {
   background-position: center;
   .inner {
     @include inner(646px);
-    position: relative;
   }
   .title {
     position: absolute;
@@ -315,7 +313,6 @@ header {
     }
     .inner {
       @include inner(62px);
-      position: relative;
       z-index: 1;
       display: flex;
       // relative로 인해 줄어들려고 하다가, inner부분때문에 62px됨
@@ -474,31 +471,31 @@ header {
   .rewards-left {
     width: 50%;
     height: 100%;
-    position: absolute;
-    left: 0;
     background-color: #272727;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   .rewards-right {
     width: 50%;
     height: 100%;
+    background-color: #d5c798;
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #d5c798;
   }
   .inner {
     @include inner(241px);
     z-index: 1;
     background-image: url("../images/rewards.jpg");
     background-position: center;
-    position: relative;
     .btn-group {
+      width: 250px;
+      display: flex;
+      flex-wrap: wrap; // width 초과하면 줄바꿈
       position: absolute;
       right: 0;
       bottom: 24px;
-      width: 250px;
-      display: flex;
-      flex-wrap: wrap;
       .btn {
         &.sign-up {
           @include btn(white);
@@ -508,12 +505,12 @@ header {
         }
         &.sign-in {
           @include btn($black);
-          width: 110px;
+          width: 110px; // 가로 맞추기위한 width 조절
         }
         &.gift {
           @include btn($black);
-          flex: 1;
           margin-top: 10px;
+          flex-grow: 1; // flex컨테이너 안에서 최대한의 너비 쓸 수 있는 조건
         }
       }
     }
@@ -521,6 +518,61 @@ header {
 }
 
 .youtube {
+  position: relative;
+  height: 700px;
+  background-color: #333;
+  overflow: hidden;
+  .youtube__area {
+    width: 1920px;
+    background-color: orange;
+    position: absolute;
+    left: 50%;
+    margin-left: calc(1920px / -2);
+    top: 50%;
+    margin-top: calc(1920px * 9 / 16 / -2);
+    &::before {
+      content: "";
+      display: block; // 가상요소선택자는 inline요소
+      width: 100%;
+      height: 0;
+      padding-top: 56.25%;
+    }
+  }
+  #player {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .youtube__cover {
+    background-image: url("../images/video_cover_pattern.png");
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .inner {
+    @include inner(700px);
+    color: orange;
+    .floating1 {
+      position: absolute;
+      top: 50px;
+      left: 0;
+    }
+    .floating2 {
+      position: absolute;
+      top: 350px;
+      left: 150px;
+    }
+    .floating3 {
+      position: absolute;
+      bottom: -200px;
+      right: 0;
+    }
+  }
 }
 
 .season-product {
@@ -528,7 +580,6 @@ header {
 
   .inner {
     @include inner(400px);
-    position: relative;
     display: flex;
     .product {
       position: absolute;
@@ -555,7 +606,6 @@ header {
   .inner {
     @include inner(400px);
     display: flex;
-    position: relative;
     .reserve-logo {
       position: absolute;
       top: 110px;
@@ -644,7 +694,6 @@ header {
   background-image: url("../images/find_store_bg.jpg");
   .inner {
     @include inner(400px);
-    position: relative;
     // background-color: $green;
     // display: flex;
     .texture1 {
@@ -692,7 +741,6 @@ header {
     @include inner(120px);
     padding: 40px 0;
     box-sizing: border-box;
-    position: relative;
     display: flex;
     align-items: center;
     .swiper-container {
